# RentMe

./: .gitignore  CODING_STANDARDS.md  IOS_THEME_GUIDE.md  MEMORY.md  PROGRESS.md  README.md  VAPID_PRIVATE_KEY  design.md  index.html  package-lock.json  package.json  solana-admin-keypair.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  wrangler.pages.jsonc
Superprompt/: devpost.md  superprompt.md
docs/: deployment.md
docs/mywallet-grade-rentme/: README.md
public/: _headers  manifest.json  sw.js
solana/: Anchor.toml
solana/programs/rentme-escrow/: Cargo.toml  keypair.json
solana/programs/rentme-escrow/src/: lib.rs
src/: App.tsx  main.tsx
src/components/: AppShell.module.scss  AppShell.tsx  BottomNav.module.scss  BottomNav.tsx  BottomSheet.module.scss  BottomSheet.tsx  FreelanceBottomNav.tsx  FreelanceConfirmModal.module.scss  FreelanceConfirmModal.tsx  FreelanceSidebarNav.tsx  FullscreenViewer.module.scss  FullscreenViewer.tsx  ImageCarousel.module.scss  ImageCarousel.tsx  LocationPicker.module.scss  LocationPicker.tsx  OtpInput.module.scss  OtpInput.tsx  ProfileAvatarButton.module.scss  ProfileAvatarButton.tsx  ProfileOverlay.module.scss  ProfileOverlay.tsx  ProfilePanel.module.scss  ProfilePanel.tsx  PropertyCard.module.scss  PropertyCard.tsx  SidebarNav.module.scss  SidebarNav.tsx  SubPageHeader.module.scss  SubPageHeader.tsx
src/hooks/: useUnreadCount.ts
welcomescreen_test/: WelcomeScreen.module.scss  WelcomeScreen.tsx  index.html  main.tsx  reset.css  vite.config.ts
workers/: worker-configuration.d.ts  wrangler.jsonc
(+201 files in other folders)
